Upload dialogs improvements
- Align dialog title with close button
- Review spacing and sizes
- Better messages on upload failures

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -681,11 +681,11 @@
 	"training.training": "Entrenament",
 	"upload.check_files": "Comprova l'estat dels fitxers",
 	"upload.completed": "completat",
+	"upload.conflict": "Ja existeix un fitxer amb el mateix nom.",
 	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 4 columnes: <code>Títol, Cos, Format, Etiquetes</code>",
 	"upload.csv_format": "La columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetes</code>segueix aquest patró:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.duplicated": "Fitxer duplicat",
-	"upload.error": "Error desconegut",
+	"upload.error": "La càrrega ha fallat",
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
 	"upload.invalid_csv": "L'arxiu CSV no és vàlid",
@@ -693,6 +693,7 @@
 	"upload.labels_number": "{{num}} etiquetes",
 	"upload.link": "Afegeix enllaços",
 	"upload.once_uploaded": "Un cop  pujats, des de la pàgina \"Llistat de recursos\", podràs veure'n l'estat. Quan el semàfor del recurs sigui verd el podràs cercar i visualitzar.",
+	"upload.progress-dialog-title": "Cua de pujades",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrossegueu els fitxers o feu clic aquí",
 	"upload.size_warning_1": "Els fitxers multimèdia no poden superar {{ maxMedia }} i els fitxers no multimèdia {{ max }}.",
@@ -700,7 +701,6 @@
 	"upload.takes_time": "Nuclia necessita una estona per a processar els fitxers.",
 	"upload.upload_from_csv": "Afegir recursos des de CSV",
 	"upload.uploading_files": "<strong>Càrrega de fitxers.</strong> Mentrestant, no dubteu a utilitzar Nuclia",
-	"upload.uploading_queue": "Cua de pujades",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivell és el nom del conjunt d'etiquetes, les subcarpetes són etiquetes. Si les subcarpetes estan imbricades, els fitxers tindran diverses etiquetes. Les etiquetes es crearan automàticament si encara no estan definides al caixa de coneixement.",
 	"upload.use_folder_as_labels.label": "Utilitzeu noms de carpetes com a etiquetes",
 	"user.logout": "Sortir",
