--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -751,11 +751,11 @@
 	"training.training": "Training",
 	"upload.check_files": "Check file status",
 	"upload.completed": "completed",
+	"upload.conflict": "A file with the same name already exists.",
 	"upload.csv_description": "Create multiple resources by selecting a CSV file with 4 columns: <code>Title, Body, Format, Labels</code>",
 	"upload.csv_format": "<code>Format</code> column must be one of theses values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "<code>Labels</code> column follows this pattern:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.duplicated": "Duplicated file",
-	"upload.error": "Unknown error",
+	"upload.error": "Upload failed",
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
 	"upload.invalid_csv": "Invalid CSV file",
@@ -763,6 +763,7 @@
 	"upload.labels_number": "{{num}} labels",
 	"upload.link": "Add links",
 	"upload.once_uploaded": "Once uploaded, you can see the status from the resource list page. When the resource status is green, it will show up in search results.",
+	"upload.progress-dialog-title": "Upload queue",
 	"upload.progress.conflicts": "Conflicts",
 	"upload.progress.failed": "Failed",
 	"upload.select_csv": "Select CSV",
@@ -772,7 +773,6 @@
 	"upload.takes_time": "We needs some time to process the files. Feel free to close this dialog box and keep working.",
 	"upload.upload_from_csv": "Add resources from CSV",
 	"upload.uploading_files": "<strong>Uploading files.</strong> Feel free to use Nuclia in the meantime",
-	"upload.uploading_queue": "Upload queue",
 	"upload.use_folder_as_labels.help": "First-level folder is the label set name, subfolders are labels. If subfolders are nested, files will get multiple labels. Labels will be created automatically if they are not defined in the knowledge box yet.",
 	"upload.use_folder_as_labels.label": "Use folder names as label names",
 	"user.logout": "Log out",
