--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -681,11 +681,11 @@
 	"training.training": "Entrenamiento",
 	"upload.check_files": "Comprueba el estado de los ficheros",
 	"upload.completed": "completado",
+	"upload.conflict": "Ya existe un archivo con el mismo nombre.",
 	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 4 columnas: <code>Título, Cuerpo, Formato, Etiquetas</code>",
 	"upload.csv_format": "La columna <code>Formato</code> puede ser uno de estos valores: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetas</code>sigue este patrón:\n<code>labelset1/label1|labelset2/label2...</code>",
-	"upload.duplicated": "Fichero duplicado",
-	"upload.error": "Error desconocido",
+	"upload.error": "Subida fallida",
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
 	"upload.invalid_csv": "El archivo CSV no es válido",
@@ -693,6 +693,7 @@
 	"upload.labels_number": "{{num}} etiquetas",
 	"upload.link": "Agregar enlaces",
 	"upload.once_uploaded": "Una vez subidos, desde la página \"Listado de recursos\", podrás ver su estado. Cuando el semáforo del recurso sea verde lo podrás buscar y visualizar.",
+	"upload.progress-dialog-title": "Cola de subidas",
 	"upload.select_csv": "Seleccionar CSV",
 	"upload.select_file": "Arrastre sus archivos o haga clic aquí",
 	"upload.size_warning_1": "Los archivos multimedia no pueden exceder {{ maxMedia }} y los archivos no multimedia {{ max }}.",
@@ -700,7 +701,6 @@
 	"upload.takes_time": "Nuclia necesita un rato para procesar los archivos.",
 	"upload.upload_from_csv": "Añadir recursos desde CSV",
 	"upload.uploading_files": "<strong>Subiendo archivos.</strong> Siéntase libre de usar Nuclia mientras tanto",
-	"upload.uploading_queue": "Cola de subidas",
 	"upload.use_folder_as_labels.help": "La carpeta de primer nivel es el nombre del conjunto de etiquetas, las subcarpetas son etiquetas. Si las subcarpetas están anidadas, los archivos obtendrán varias etiquetas. Las etiquetas se crearán automáticamente si aún no están definidas en la caja de conocimiento.",
 	"upload.use_folder_as_labels.label": "Usar nombres de carpetas como etiquetas",
 	"user.logout": "Salir",
