[sc-3251] Import links from a CSV

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -366,8 +366,9 @@
 	"login.user_registered_as_external_user": "A user with this email already exists. Please sign in with your Google Account.",
 	"login.validate_and_explore": "Please, verify your account",
 	"login.wrong_email": "Wrong email?",
+	"modal.create_link.csv_file": "CSV file",
 	"modal.create_link.input": "Type or paste the link",
-	"modal.create_link.multiple": "Multiple",
+	"modal.create_link.multiple": "Multiple links",
 	"modal.create_link.textarea": "Paste some links (one per line)",
 	"modal.create_link.title": "Add links",
 	"modal.show_waiting_list": "Check file uploads",
@@ -755,6 +756,7 @@
 	"upload.csv_description": "Create multiple resources by selecting a CSV file with 4 columns: <code>Title, Body, Format, Labels</code>",
 	"upload.csv_format": "<code>Format</code> column must be one of theses values: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "<code>Labels</code> column follows this pattern:\n<code>labelset1/label1|labelset2/label2...</code>",
+	"upload.csv_links_description": "Select a CSV file with 2 columns: <code>Url, Labels</code>",
 	"upload.error": "Upload failed",
 	"upload.files": "Upload files",
 	"upload.folder": "Upload a folder",
