[sc-3251] Import links from a CSV (#579)
* Refactor UploadText component

* [sc-3251] Import links from a CSV

* Create new Tile components on each saerch

* Refactor components

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -324,8 +324,9 @@
 	"login.user_registered_as_external_user": "Ja existeix un usuari amb aquest correu electrònic. Si us plau, intenta entrar amb el teu compte de Google.",
 	"login.validate_and_explore": "Verifica el compte i comença a explorar",
 	"login.wrong_email": "Correu electrònic incorrecte?",
+	"modal.create_link.csv_file": "Arxiu CSV",
 	"modal.create_link.input": "Escriu o enganxa l’enllaç",
-	"modal.create_link.multiple": "Múltiples",
+	"modal.create_link.multiple": "Múltiples enllaços",
 	"modal.create_link.textarea": "Enganxeu alguns enllaços (un per línia)",
 	"modal.create_link.title": "Afegeix enllaços",
 	"modal.show_waiting_list": "Comprova la cua de fitxers",
@@ -686,6 +687,7 @@
 	"upload.csv_description": "Creeu diversos recursos seleccionant un fitxer CSV amb 4 columnes: <code>Títol, Cos, Format, Etiquetes</code>",
 	"upload.csv_format": "La columna <code>Format</code> pot ser un d'aquests valors: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetes</code>segueix aquest patró:\n<code>labelset1/label1|labelset2/label2...</code>",
+	"upload.csv_links_description": "Selecciona un arxiu CSV amb 2 columns: <code>Url, Etiquetes</code>",
 	"upload.error": "La càrrega ha fallat",
 	"upload.files": "Carregueu fitxers",
 	"upload.folder": "Carregueu una carpeta",
