--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -324,8 +324,9 @@
 	"login.user_registered_as_external_user": "Ya existe un usuario con ese correo electrónico. Por favor, trate de entrar con su cuenta de Google.",
 	"login.validate_and_explore": "Verifica la cuenta y empieza a explorar ",
 	"login.wrong_email": "Email incorrecto?",
+	"modal.create_link.csv_file": "Archivo CSV",
 	"modal.create_link.input": "Escribe o pega el enlace",
-	"modal.create_link.multiple": "Múltiple",
+	"modal.create_link.multiple": "Múltiples enlaces",
 	"modal.create_link.textarea": "Pegue algunos enlaces (uno por línea)",
 	"modal.create_link.title": "Añadir enlaces",
 	"modal.show_waiting_list": "Compruebe la cola de ficheros",
@@ -686,6 +687,7 @@
 	"upload.csv_description": "Cree múltiples recursos seleccionando un archivo CSV con 4 columnas: <code>Título, Cuerpo, Formato, Etiquetas</code>",
 	"upload.csv_format": "La columna <code>Formato</code> puede ser uno de estos valores: <code>PLAIN / MARKDOWN / HTML / RST</code>",
 	"upload.csv_labels": "La columna <code>Etiquetas</code>sigue este patrón:\n<code>labelset1/label1|labelset2/label2...</code>",
+	"upload.csv_links_description": "Selecciona un archivo CSV con 2 columnas: <code>Url, Etiquetas</code>",
 	"upload.error": "Subida fallida",
 	"upload.files": "Subir archivos",
 	"upload.folder": "Subir una carpeta",
