Add search field to paragraph annotation page
  - Fix scrollable area of both paragraph annotation and classification pages to avoid white space below the header and above the footer
  - Add searchInField method in paragraph service
  - Move page content width management in paragraph annotation component

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -461,7 +461,6 @@
 	"resource.field-annotation.help": "Seleccioneu una família per destacar i anotar les entitats corresponents",
 	"resource.field-annotation.select-family-before": "Seleccioneu una família perquè pugueu afegir/editar/eliminar anotacions",
 	"resource.field-classification": "Classificació de paràgrafs",
-	"resource.field-classification.search": "Cerca",
 	"resource.field-file": "Camp de Fitxer",
 	"resource.field-file.dropzone": "Deixeu anar el vostre fitxer aquí o feu clic per seleccionar-lo",
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
@@ -476,6 +475,7 @@
 	"resource.field.delete-confirm-description": "Confirmeu que voleu suprimir aquest {{type}}?",
 	"resource.field.delete-confirm-title": "Vols suprimir {{type}}?",
 	"resource.field.delete-successful": "El camp s'ha suprimit correctament",
+	"resource.field.search": "Cerca",
 	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
