--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -506,7 +506,6 @@
 	"resource.field-annotation.help": "Select a family to highlight and annotate the corresponding entities",
 	"resource.field-annotation.select-family-before": "Select a family so you can add/edit/remove annotations",
 	"resource.field-classification": "Paragraphs classification",
-	"resource.field-classification.search": "Search",
 	"resource.field-file": "File Field",
 	"resource.field-file.dropzone": "Drop your file here or click to select it",
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
@@ -521,6 +520,7 @@
 	"resource.field.delete-confirm-description": "Are you sure you want to delete this {{type}}?",
 	"resource.field.delete-confirm-title": "Delete {{type}}?",
 	"resource.field.delete-successful": "Field deleted successfully",
+	"resource.field.search": "Search",
 	"resource.field.update-successful": "Field updated successfully",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
