--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -461,7 +461,6 @@
 	"resource.field-annotation.help": "Seleccione una familia para resaltar y anotar las entidades correspondientes",
 	"resource.field-annotation.select-family-before": "Seleccione una familia para que pueda agregar/editar/eliminar anotaciones",
 	"resource.field-classification": "Clasificación de párrafos",
-	"resource.field-classification.search": "Buscar",
 	"resource.field-file": "Campo de Archivo",
 	"resource.field-file.dropzone": "Suelte su archivo aquí o haga clic para seleccionarlo",
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
@@ -476,6 +475,7 @@
 	"resource.field.delete-confirm-description": "¿Está seguro de que desea eliminar esto {{type}}?",
 	"resource.field.delete-confirm-title": "¿Eliminar {{type}}?",
 	"resource.field.delete-successful": "Campo eliminado con éxito",
+	"resource.field.search": "Buscar",
 	"resource.field.update-successful": "Campo actualizado con éxito",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
