Add preview page
  - Preview page displays extracted text by field
  - Go to preview when clicking on resource list row

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -478,6 +478,7 @@
 	"resource.field.search": "Cerca",
 	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
+	"resource.preview.open-viewer": "Visor obert",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
 	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
