Fix search input placeholder for the different kind of tiles

--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -51,5 +51,7 @@
 	"results.summary": "Summary",
 	"suggest.intents": "Labels",
 	"suggest.paragraphs": "Suggested paragraphs",
-	"tile.find-transcript": "Find a transcript"
+	"tile.find-in-audio": "Find in audio",
+	"tile.find-in-document": "Find in document",
+	"tile.find-in-video": "Find in video"
 }
