--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -50,5 +50,7 @@
 	"results.summary": "Resum",
 	"suggest.intents": "Etiquetes",
 	"suggest.paragraphs": "Paràgraf suggerit",
-	"tile.find-transcript": "Busca una transcripció"
+	"tile.find-in-audio": "Troba a l'àudio",
+	"tile.find-in-document": "Troba al document",
+	"tile.find-in-video": "Troba al vídeo"
 }
