[sc-3073] Image tile implementation

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -52,5 +52,6 @@
 	"suggest.paragraphs": "Paràgraf suggerit",
 	"tile.find-in-audio": "Troba a l'àudio",
 	"tile.find-in-document": "Troba al document",
+	"tile.find-in-image": "Buscar a la imatge",
 	"tile.find-in-video": "Troba al vídeo"
 }
