--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -53,5 +53,6 @@
 	"suggest.paragraphs": "Suggested paragraphs",
 	"tile.find-in-audio": "Find in audio",
 	"tile.find-in-document": "Find in document",
+	"tile.find-in-image": "Find in image",
 	"tile.find-in-video": "Find in video"
 }
