--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -52,5 +52,6 @@
 	"suggest.paragraphs": "Párrafo sugerido",
 	"tile.find-in-audio": "Buscar en audio",
 	"tile.find-in-document": "Buscar en documento",
+	"tile.find-in-image": "Buscar en la imagen",
 	"tile.find-in-video": "Encontrar en vídeo"
 }
