--- a/libs/search-widget/public/i18n/fr.json
+++ b/libs/search-widget/public/i18n/fr.json
@@ -50,5 +50,6 @@
 	"suggest.paragraphs": "Paragraphes suggérés",
 	"tile.find-in-audio": "Rechercher dans l'audio",
 	"tile.find-in-document": "Rechercher dans le document",
+	"tile.find-in-image": "Rechercher dans l'image",
 	"tile.find-in-video": "Rechercher dans la vidéo"
 }
