[sc-4239] Add direct link to the different resource edition sections

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -435,7 +435,6 @@
 	"resource.delete_resources_confirm": "Vols suprimir documents?",
 	"resource.delete_resources_warning": "Si elimines aquests documents també s’esborrarà tota la informació processada.",
 	"resource.description.title": "Descripció",
-	"resource.edit": "Edita i anota",
 	"resource.empty": "No hi ha contingut al vostre caixa de coneixement en aquest moment.",
 	"resource.empty.import": "Comenceu a utilitzar Nuclia a l'instant escollint un conjunt de dades de mostra. Aquesta és la manera més ràpida de començar i explorar com funciona Nuclia.",
 	"resource.entities.date": "Dates",
@@ -477,6 +476,9 @@
 	"resource.field.delete-successful": "El camp s'ha suprimit correctament",
 	"resource.field.search": "Cerca",
 	"resource.field.update-successful": "El camp s'ha actualitzat correctament",
+	"resource.menu.annotate": "Anotar",
+	"resource.menu.classify": "Classificar",
+	"resource.menu.edit": "Edita",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.preview.open-viewer": "Visor obert",
 	"resource.processed_resources": "Recursos processats",
