--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -480,7 +480,6 @@
 	"resource.delete_resources_confirm": "Delete documents?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description.title": "Description",
-	"resource.edit": "Edit & Annotate",
 	"resource.empty": "There is no content in your knowledge box at the moment.",
 	"resource.empty.import": "Start using Nuclia instantly by picking a sample dataset. This is the fastest way to get started and explore how Nuclia works.",
 	"resource.entities.date": "Date",
@@ -522,6 +521,9 @@
 	"resource.field.delete-successful": "Field deleted successfully",
 	"resource.field.search": "Search",
 	"resource.field.update-successful": "Field updated successfully",
+	"resource.menu.annotate": "Annotate",
+	"resource.menu.classify": "Classify",
+	"resource.menu.edit": "Edit",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.preview.open-viewer": "Open viewer",
 	"resource.processed_resources": "Processed resources",
