--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -435,7 +435,6 @@
 	"resource.delete_resources_confirm": "¿Eliminar documentos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description.title": "Descripción",
-	"resource.edit": "Editar y anotar",
 	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
 	"resource.empty.import": "Comience a usar Nuclia al instante eligiendo un conjunto de datos de muestra. Esta es la forma más rápida de comenzar y explorar cómo funciona Nuclia.",
 	"resource.entities.date": "Fechas",
@@ -477,6 +476,9 @@
 	"resource.field.delete-successful": "Campo eliminado con éxito",
 	"resource.field.search": "Buscar",
 	"resource.field.update-successful": "Campo actualizado con éxito",
+	"resource.menu.annotate": "Anotar",
+	"resource.menu.classify": "Clasificar",
+	"resource.menu.edit": "Editar",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.preview.open-viewer": "Visor abierto",
 	"resource.processed_resources": "Recursos procesados",
