--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -200,9 +200,9 @@
 	"generic.presence": "Presència",
 	"generic.previous": "Pàgina anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Enviar a re-entendre el fitxer",
-	"generic.reindex-plural": "Enviar a re-entendre els fitxers",
-	"generic.reindexing": "Tornant a enviar fitxers",
+	"generic.reindex": "Reprocessar el recurs",
+	"generic.reindex-plural": "Reprocessar els recursos",
+	"generic.reindexing": "Reprocessant els recursos",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Llistat de recursos",
