--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -240,9 +240,9 @@
 	"generic.presence": "Presence",
 	"generic.previous": "Previous page",
 	"generic.profile": "Profile",
-	"generic.reindex": "Resubmit file",
-	"generic.reindex-plural": "Resubmit files",
-	"generic.reindexing": "Resubmitting files",
+	"generic.reindex": "Reprocess resource",
+	"generic.reindex-plural": "Reprocess resources",
+	"generic.reindexing": "Reprocessing resources",
 	"generic.relevance": "Relevance",
 	"generic.report_bug": "Report a bug",
 	"generic.reset": "Reset",
