--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -200,9 +200,9 @@
 	"generic.presence": "Presencia",
 	"generic.previous": "Página anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Enviar a re-entender el fichero",
-	"generic.reindex-plural": "Enviar a re-entender los ficheros",
-	"generic.reindexing": "Reenviar archivos",
+	"generic.reindex": "Reprocesar el recurso",
+	"generic.reindex-plural": "Reprocesar los recursos",
+	"generic.reindexing": "Reprocesando los recursos",
 	"generic.relevance": "Relevancia",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Listado de recursos",
