--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -482,7 +482,7 @@
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.preview.open-viewer": "Visor abierto",
 	"resource.processed_resources": "Recursos procesados",
-	"resource.profile": "Perfil",
+	"resource.profile": "Recurso",
 	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
