Enable multi selection of labels when classifying paragraphs

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -427,8 +427,10 @@
 	"resource.classification": "Classificació de recursos",
 	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
+	"resource.classification.clean-up": "Netejar",
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
+	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
 	"resource.created": "Data creació",
 	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
