--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -472,8 +472,10 @@
 	"resource.classification": "Resource classification",
 	"resource.classification-column": "Classification",
 	"resource.classification-page-link": "Classification page",
+	"resource.classification.clean-up": "Clean up",
 	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
+	"resource.classification.remove-label": "Remove label from selection",
 	"resource.created": "Created",
 	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
