--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -427,8 +427,10 @@
 	"resource.classification": "Clasificación de recursos",
 	"resource.classification-column": "Clasificación",
 	"resource.classification-page-link": "página de Clasificación",
+	"resource.classification.clean-up": "Limpiar",
 	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
+	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
 	"resource.created": "Data de creación",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
