Display a message when there is no extracted text for a field
  - Display a spinner when loading paragraphs takes more than 1.5s
  - Fix alignment for no resource label set message on resource classification page

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -424,7 +424,6 @@
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
-	"resource.classification": "Classificació de recursos",
 	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
 	"resource.classification.clean-up": "Netejar",
@@ -467,6 +466,7 @@
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
 	"resource.field-file.new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
+	"resource.field-no-paragraph": "Aquest camp no conté cap paràgraf.",
 	"resource.field-text": "Camp de Text",
 	"resource.field-text-body-label": "Cos del text",
 	"resource.field-text-format-label": "Format de text",
