--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -469,7 +469,6 @@
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
-	"resource.classification": "Resource classification",
 	"resource.classification-column": "Classification",
 	"resource.classification-page-link": "Classification page",
 	"resource.classification.clean-up": "Clean up",
@@ -512,6 +511,7 @@
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
 	"resource.field-file.new-file": "New file:",
 	"resource.field-link": "Link Field",
+	"resource.field-no-paragraph": "This field doesn't contain any paragraph.",
 	"resource.field-text": "Text Field",
 	"resource.field-text-body-label": "Text body",
 	"resource.field-text-format-label": "Text format",
