--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -424,7 +424,6 @@
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
-	"resource.classification": "Clasificación de recursos",
 	"resource.classification-column": "Clasificación",
 	"resource.classification-page-link": "página de Clasificación",
 	"resource.classification.clean-up": "Limpiar",
@@ -467,6 +466,7 @@
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
 	"resource.field-file.new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
+	"resource.field-no-paragraph": "Este campo no contiene ningún párrafo.",
 	"resource.field-text": "Campo de Texto",
 	"resource.field-text-body-label": "Cuerpo de texto",
 	"resource.field-text-format-label": "Formato de texto",
