[sc-4211] Enable multi selection of labels when classifying (#607)
* Fix layout on resource edition flow

  - footer always fixed on the bottom of the page
  - usage of the right panel in most of the pages

* Improve translations

* Fix layout on all edit forms

* Automatically select first field on classification section

Rename profile into resource

* Enable multi selection of labels when classifying paragraphs

* Fix message display when no labels for paragraphs

* Display a message when there is no extracted text for a field

  - Display a spinner when loading paragraphs takes more than 1.5s
  - Fix alignment for no resource label set message on resource classification page

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -240,9 +240,9 @@
 	"generic.presence": "Presence",
 	"generic.previous": "Previous page",
 	"generic.profile": "Profile",
-	"generic.reindex": "Resubmit file",
-	"generic.reindex-plural": "Resubmit files",
-	"generic.reindexing": "Resubmitting files",
+	"generic.reindex": "Reprocess resource",
+	"generic.reindex-plural": "Reprocess resources",
+	"generic.reindexing": "Reprocessing resources",
 	"generic.relevance": "Relevance",
 	"generic.report_bug": "Report a bug",
 	"generic.reset": "Reset",
@@ -469,11 +469,12 @@
 	"resource.add_labels_error": "An error occurred while adding labels on {{count}} resources",
 	"resource.add_labels_success": "Labels successfully added on {{count}} resources",
 	"resource.authorship": "Authorship",
-	"resource.classification": "Resource classification",
 	"resource.classification-column": "Classification",
 	"resource.classification-page-link": "Classification page",
+	"resource.classification.clean-up": "Clean up",
 	"resource.classification.no-paragraph-labelset": "There is no label set for paragraphs. You can add some in",
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
+	"resource.classification.remove-label": "Remove label from selection",
 	"resource.created": "Created",
 	"resource.delete_resource_confirm": "Delete document?",
 	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
@@ -510,6 +511,7 @@
 	"resource.field-file.dropzone-label": "To replace current file <strong>{{filename}}</strong>, drop your file or click below to select it",
 	"resource.field-file.new-file": "New file:",
 	"resource.field-link": "Link Field",
+	"resource.field-no-paragraph": "This field doesn't contain any paragraph.",
 	"resource.field-text": "Text Field",
 	"resource.field-text-body-label": "Text body",
 	"resource.field-text-format-label": "Text format",
@@ -527,7 +529,7 @@
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.preview.open-viewer": "Open viewer",
 	"resource.processed_resources": "Processed resources",
-	"resource.profile": "Profile",
+	"resource.profile": "Resource",
 	"resource.reindex-all-info": "Reprocessing all resources in error started. This may take some time.",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.resources": "Resources",
