--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -200,9 +200,9 @@
 	"generic.presence": "Presencia",
 	"generic.previous": "Página anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Enviar a re-entender el fichero",
-	"generic.reindex-plural": "Enviar a re-entender los ficheros",
-	"generic.reindexing": "Reenviar archivos",
+	"generic.reindex": "Reprocesar el recurso",
+	"generic.reindex-plural": "Reprocesar los recursos",
+	"generic.reindexing": "Reprocesando los recursos",
 	"generic.relevance": "Relevancia",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Listado de recursos",
@@ -424,11 +424,12 @@
 	"resource.add_labels_error": "Se produjo un error al agregar etiquetas en {{count}} recursos",
 	"resource.add_labels_success": "Etiquetas añadidas correctamente en {{count}} recursos",
 	"resource.authorship": "Autoría",
-	"resource.classification": "Clasificación de recursos",
 	"resource.classification-column": "Clasificación",
 	"resource.classification-page-link": "página de Clasificación",
+	"resource.classification.clean-up": "Limpiar",
 	"resource.classification.no-paragraph-labelset": "No hay un conjunto de etiquetas para los párrafos. Puedes agregar algunos en",
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
+	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
 	"resource.created": "Data de creación",
 	"resource.delete_resource_confirm": "¿Eliminar documento?",
 	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
@@ -465,6 +466,7 @@
 	"resource.field-file.dropzone-label": "Para reemplazar el archivo actual <strong>{{filename}}</strong>, suelte su archivo o haga clic a continuación para seleccionarlo",
 	"resource.field-file.new-file": "Archivo nuevo:",
 	"resource.field-link": "Campo de Enlace",
+	"resource.field-no-paragraph": "Este campo no contiene ningún párrafo.",
 	"resource.field-text": "Campo de Texto",
 	"resource.field-text-body-label": "Cuerpo de texto",
 	"resource.field-text-format-label": "Formato de texto",
@@ -482,7 +484,7 @@
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.preview.open-viewer": "Visor abierto",
 	"resource.processed_resources": "Recursos procesados",
-	"resource.profile": "Perfil",
+	"resource.profile": "Recurso",
 	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
