--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -200,9 +200,9 @@
 	"generic.presence": "Presència",
 	"generic.previous": "Pàgina anterior",
 	"generic.profile": "Perfil",
-	"generic.reindex": "Enviar a re-entendre el fitxer",
-	"generic.reindex-plural": "Enviar a re-entendre els fitxers",
-	"generic.reindexing": "Tornant a enviar fitxers",
+	"generic.reindex": "Reprocessar el recurs",
+	"generic.reindex-plural": "Reprocessar els recursos",
+	"generic.reindexing": "Reprocessant els recursos",
 	"generic.relevance": "Rellevància",
 	"generic.report_bug": "Notificar un error",
 	"generic.resource_list": "Llistat de recursos",
@@ -424,11 +424,12 @@
 	"resource.add_labels_error": "S'ha produït un error en afegir etiquetes als recursos {{count}}",
 	"resource.add_labels_success": "S'han afegit correctament etiquetes a {{count}} recursos",
 	"resource.authorship": "Autoria",
-	"resource.classification": "Classificació de recursos",
 	"resource.classification-column": "Classificació",
 	"resource.classification-page-link": "pàgina de Classificació",
+	"resource.classification.clean-up": "Netejar",
 	"resource.classification.no-paragraph-labelset": "No hi ha cap etiqueta establerta per als paràgrafs. Podeu afegir-ne alguns",
 	"resource.classification.no-resource-labelset": "No hi ha cap etiqueta establerta per als recursos. Podeu afegir-ne alguns",
+	"resource.classification.remove-label": "Elimina l'etiqueta de la selecció",
 	"resource.created": "Data creació",
 	"resource.delete_resource_confirm": "Vols suprimir el document?",
 	"resource.delete_resource_warning": "Si elimines aquest document també s’esborrarà tota la informació processada.",
@@ -465,6 +466,7 @@
 	"resource.field-file.dropzone-label": "Per substituir el fitxer actual <strong>{{filename}}</strong>, deixeu anar el fitxer o feu clic a continuació per seleccionar-lo",
 	"resource.field-file.new-file": "Nou fitxer:",
 	"resource.field-link": "Camp d'Enllaç",
+	"resource.field-no-paragraph": "Aquest camp no conté cap paràgraf.",
 	"resource.field-text": "Camp de Text",
 	"resource.field-text-body-label": "Cos del text",
 	"resource.field-text-format-label": "Format de text",
@@ -482,7 +484,7 @@
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.preview.open-viewer": "Visor obert",
 	"resource.processed_resources": "Recursos processats",
-	"resource.profile": "Perfil",
+	"resource.profile": "Recurs",
 	"resource.reindex-all-info": "S'ha iniciat el reprocessament de tots els recursos per error. Això pot trigar una mica.",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.resources": "Recursos",
