Setup tile menu in dashboard's search results

--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -431,9 +431,11 @@
 	"resource.classification.no-resource-labelset": "No hay ninguna etiqueta establecida para los recursos. Puedes agregar algunos en",
 	"resource.classification.remove-label": "Eliminar etiqueta de la selección",
 	"resource.created": "Data de creación",
-	"resource.delete_resource_confirm": "¿Eliminar documento?",
-	"resource.delete_resource_warning": "Si eliminas este documento también se borrará toda la información procesada.",
-	"resource.delete_resources_confirm": "¿Eliminar documentos?",
+	"resource.delete_resource_confirm": "¿Eliminar recurso?",
+	"resource.delete_resource_title": "¿Está seguro de que desea eliminar el recurso?",
+	"resource.delete_resource_warning": "Si elimina este recurso, toda la información, los campos y las entidades creadas durante su procesamiento desaparecerán. No puede deshacer esta acción.",
+	"resource.delete_resources_confirm": "¿Eliminar recursos?",
+	"resource.delete_resources_title": "¿Está seguro de que desea eliminar los recursos?",
 	"resource.delete_resources_warning": "Si eliminas estos documentos también se borrará toda la información procesada.",
 	"resource.description.title": "Descripción",
 	"resource.empty": "No hay contenido en su caja de conocimiento en este momento.",
@@ -486,6 +488,8 @@
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Recurso",
 	"resource.reindex-all-info": "Se inició el reprocesamiento de todos los recursos por error. Esto puede tomar algo de tiempo.",
+	"resource.reprocess_resource_description": "Necesitamos algo de tiempo para procesar los datos. Una vez reprocesado, puede verlo en la página de la lista de recursos disponible para editar, clasificar o anotar.",
+	"resource.reprocess_resource_title": "¿Está seguro de que desea volver a procesar el recurso?",
 	"resource.resource_page_number": "{{num}} por página",
 	"resource.resources": "Recursos",
 	"resource.save-successful": "Recurso guardado",
