--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -476,9 +476,11 @@
 	"resource.classification.no-resource-labelset": "There is no label set for resources. You can add some in",
 	"resource.classification.remove-label": "Remove label from selection",
 	"resource.created": "Created",
-	"resource.delete_resource_confirm": "Delete document?",
-	"resource.delete_resource_warning": "Deleting this document will also delete all processed information.",
-	"resource.delete_resources_confirm": "Delete documents?",
+	"resource.delete_resource_confirm": "Delete resource?",
+	"resource.delete_resource_title": "Are you sure you want to delete the resource?",
+	"resource.delete_resource_warning": "If you delete this resource all information, fields, and entities created during its processing will disappear. You cannot undo this action. ",
+	"resource.delete_resources_confirm": "Delete resources?",
+	"resource.delete_resources_title": "Are you sure you want to delete the resources?",
 	"resource.delete_resources_warning": "Deleting these documents will also delete all processed information.",
 	"resource.description.title": "Description",
 	"resource.empty": "There is no content in your knowledge box at the moment.",
@@ -531,6 +533,8 @@
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Resource",
 	"resource.reindex-all-info": "Reprocessing all resources in error started. This may take some time.",
+	"resource.reprocess_resource_description": "We need some time to process the data. Once reprocessed you can see it on the resource list page available for editing, classifying or annotating.",
+	"resource.reprocess_resource_title": "Are you sure you want to reprocess the resource?",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.resources": "Resources",
 	"resource.save-successful": "Resource saved",
