--- a/libs/search-widget/public/i18n/es.json
+++ b/libs/search-widget/public/i18n/es.json
@@ -53,5 +53,7 @@
 	"tile.find-in-audio": "Buscar en audio",
 	"tile.find-in-document": "Buscar en documento",
 	"tile.find-in-image": "Buscar en la imagen",
-	"tile.find-in-video": "Encontrar en vídeo"
+	"tile.find-in-video": "Encontrar en vídeo",
+	"tile.full-transcripts": "Transcripción completa",
+	"tile.search-results": "{{count}} resultados de búsqueda"
 }
